--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
-body {
+/* app.js */
+.app-container {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 10px;
+  background-color: rgb(43, 42, 71);
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  border: none;
+  gap: 16px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Movie.jsx */
+.box {
+  width: 150px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
+  background-color: rgb(74, 72, 113);
+
+}
+
+.content {
+  color: #fff;
+  display: flex;
+  justify-content: space-around;
+  font-size: 10px;
+}
+
+img {
+  width: 150px;
+  height: 200px;
 }
