--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,16 @@
 /* app.js */
+.body {
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(43, 42, 71);
+
+}
 .app-container {
   margin: 0;
   padding: 10px;
   background-color: rgb(43, 42, 71);
-  width: 100%;
-  height: 100vh;
+  width: auto;
+  height: auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -15,7 +21,7 @@
 /* Movie.jsx */
 .box {
   width: 150px;
-  height: auto;
+  height: 230px;
   display: flex;
   flex-direction: column;
   border: 1px solid black;
