20231024 css -> styled-component로 변경

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
 }
 
 /* Movie.jsx */
-.box {
+/* .box {
   width: 150px;
   height: 230px;
   display: flex;
@@ -39,4 +39,4 @@
 img {
   width: 150px;
   height: 200px;
-}
+} */
